--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,96 +52,103 @@
     "    def get_non_terminals(self):\n",
     "        return self.non_terminal_arr\n",
     "    \n",
-    "    def get_productions_same_non_terminal(self, non_terminal):\n",
-    "        productions = []\n",
-    "        for production in self.production_arr:\n",
-    "            if production.left_side == non_terminal:\n",
-    "                productions.append(production)\n",
-    "        return productions\n",
-    "    \n",
-    "    def only_right_side_of_nonterminals(self, production):\n",
+    "    def only_right_side_of_non_terminals(self, production):\n",
     "        return list(filter(lambda x: x[0] == '<' and x.index('>') == len(x)-1, production.right_side)) == production.right_side\n",
-    "    \n",
-    "    def non_terminal_has_null_sequence_on_right_side(self, non_terminal):\n",
-    "        has_null_sequence = False\n",
-    "        for production in self.get_productions_same_non_terminal(non_terminal):\n",
-    "            if production.right_side[0] == self.null_sequence_symbol:\n",
-    "                has_null_sequence = True\n",
-    "                break\n",
-    "        return has_null_sequence\n",
-    "    \n",
-    "    def has_null_sequence_derivation(self, non_terminal, before_non_terminal):\n",
-    "        has_null_sequence = False\n",
-    "        productions = []\n",
-    "        if before_non_terminal: \n",
-    "            productions = list(filter(lambda x: not non_terminal in x.right_side and not before_non_terminal in x.right_side,\n",
-    "                                      self.get_productions_same_non_terminal(non_terminal)))\n",
-    "        else:\n",
-    "            productions = list(filter(lambda x: not non_terminal in x.right_side,\n",
-    "                                      self.get_productions_same_non_terminal(non_terminal)))\n",
-    "        \n",
-    "        for production in productions:\n",
-    "            if self.non_terminal_has_null_sequence_on_right_side(production.left_side):\n",
-    "                has_null_sequence = True\n",
-    "                break\n",
-    "            if self.only_right_side_of_nonterminals(production):\n",
-    "                n_sequence = True\n",
-    "                for n_terminal in production.right_side:\n",
-    "                    n_sequence = n_sequence and self.has_null_sequence_derivation(n_terminal, non_terminal)\n",
-    "                    if not n_sequence:\n",
-    "                        break\n",
-    "                if n_sequence:\n",
-    "                    has_null_sequence = True\n",
-    "                    break\n",
-    "                    \n",
-    "        return has_null_sequence\n",
-    "            \n",
-    "    def get_nullable_non_terminals(self):\n",
-    "        nullable_non_terminals = []\n",
-    "        for non_terminal in self.get_non_terminals():\n",
-    "            if self.has_null_sequence_derivation(non_terminal, None):\n",
-    "                nullable_non_terminals.append(non_terminal)\n",
-    "        return nullable_non_terminals\n",
     "    \n",
     "    def production_has_null_sequence_on_right_side(self, production):\n",
     "        return production.right_side[0] == self.null_sequence_symbol\n",
     "    \n",
+    "    def get_non_terminal_set_from_productions(self, productions):\n",
+    "        non_terminals = set()\n",
+    "        for production in productions:\n",
+    "            if not production.left_side in non_terminals:\n",
+    "                non_terminals.add(production.left_side)\n",
+    "        return non_terminals\n",
+    "    \n",
+    "    def non_terminals_can_not_be_nullable(self, non_terminals, no_nullable_non_terminals):\n",
+    "        nullable = True\n",
+    "        for non_terminal in non_terminals:\n",
+    "            if non_terminals in  no_nullable_non_terminals:\n",
+    "                nullable = False\n",
+    "                break\n",
+    "        return nullable\n",
+    "    \n",
+    "    def non_terminal_in_productions_left_side(self, non_terminal, productions):\n",
+    "        in_productions = False\n",
+    "        for production in productions:\n",
+    "            if production.left_side == non_terminal:\n",
+    "                in_productions = True\n",
+    "                break\n",
+    "        return in_productions\n",
+    "    \n",
+    "    def get_nullable_non_terminals(self):\n",
+    "        productions = list(filter(lambda p: not p.left_side in p.right_side, self.production_arr))\n",
+    "        nullable_non_terminals = self.get_non_terminal_set_from_productions(list(\n",
+    "            filter(lambda p: self.production_has_null_sequence_on_right_side(p), productions)))\n",
+    "        suspected_p = list(filter(lambda p:  self.only_right_side_of_non_terminals(p) , productions))\n",
+    "        no_nullables_non_terminals = self.get_non_terminal_set_from_productions(list(filter(\n",
+    "            lambda p: not (self.production_has_null_sequence_on_right_side(p) or\n",
+    "                           self.only_right_side_of_non_terminals(p) or \n",
+    "                           self.non_terminal_in_productions_left_side(p.left_side, suspected_p) or\n",
+    "                           p.left_side in list(nullable_non_terminals)),\n",
+    "            productions)))\n",
+    "        while suspected_p:\n",
+    "            for production in suspected_p:\n",
+    "                if set(self.non_terminal_arr).difference(nullable_non_terminals, no_nullables_non_terminals) == set():\n",
+    "                    suspected_p = None\n",
+    "                    break\n",
+    "                if not self.non_terminals_can_not_be_nullable(production.right_side, list(no_nullables_non_terminals)):\n",
+    "                    no_nullables_non_terminals.add(production.left_side)\n",
+    "                    suspected_p.remove(production)\n",
+    "                elif set(production.right_side).difference(nullable_non_terminals) == set():\n",
+    "                    nullable_non_terminals.add(production.left_side)\n",
+    "                    suspected_p.remove(production)\n",
+    "        return nullable_non_terminals\n",
+    "    \n",
+    "    def right_side_is_nullable(self, right_side, nullable_non_terminals):\n",
+    "        nullable = True\n",
+    "        if right_side[0] == self.null_sequence_symbol:\n",
+    "            return nullable\n",
+    "        for symbol in right_side:\n",
+    "            if not symbol in nullable_non_terminals:\n",
+    "                nullable = False\n",
+    "                break\n",
+    "        return nullable\n",
+    "            \n",
     "    def get_nullable_productions(self, nullable_non_terminals):\n",
     "        production_indexes = []\n",
     "        for index in range(0, len(self.production_arr)):\n",
-    "            if self.production_has_null_sequence_on_right_side(self.production_arr[index]):\n",
+    "            if self.right_side_is_nullable(self.production_arr[index].right_side, nullable_non_terminals):\n",
     "                production_indexes.append(index)\n",
-    "            if self.only_right_side_of_nonterminals(self.production_arr[index]):\n",
-    "                all_nullable = True\n",
-    "                for non_terminal in self.production_arr[index].right_side:\n",
-    "                    all_nullable = all_nullable and non_terminal in nullable_non_terminals\n",
-    "                    if not all_nullable:\n",
-    "                        break\n",
-    "                if all_nullable:\n",
-    "                    production_indexes.append(index)\n",
     "        return production_indexes\n",
     "    \n",
-    "    def get_set_of_firsts_for_non_terminal(self, non_terminal, nullable_non_terminals):\n",
+    "    def get_productions_same_non_terminal_l_side(self, non_terminal):\n",
+    "        productions = []\n",
+    "        for production in self.production_arr:\n",
+    "            if production.left_side == non_terminal and not production in productions:\n",
+    "                productions.append(production)\n",
+    "        return productions\n",
+    "    \n",
+    "    def get_base_cases_productions_start_with_terminal(self):\n",
+    "        base_cases = []\n",
+    "        for symbol in self.non_terminal_arr:\n",
+    "            productions = self.get_productions_same_non_terminal_l_side(symbol)\n",
+    "            firsts = set()\n",
+    "            for production in productions:\n",
+    "                if self.is_non_terminal(production.right_side[0]):\n",
+    "                    firsts = None\n",
+    "                    break\n",
+    "                elif self.is_terminal(production.right_side[0]):\n",
+    "                    firsts.add(production.right_side[0])\n",
+    "            if firsts:\n",
+    "                base_cases.append((symbol, firsts))\n",
+    "        return base_cases\n",
+    "        \n",
+    "    def get_set_of_firsts(self, nullable_non_terminals):\n",
+    "        base_cases = self.get_base_cases_productions_start_with_terminal()\n",
     "        productions =  self.get_productions_same_non_terminal(non_terminal)\n",
-    "        set_of_firsts = []\n",
-    "        for production in productions:\n",
-    "            if self.is_terminal(production.right_side[0]):\n",
-    "                set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts, [production.right_side[0]])\n",
-    "            elif not self.production_has_null_sequence_on_right_side(production):\n",
-    "                for symbol in production.right_side:\n",
-    "                    if symbol == non_terminal:\n",
-    "                        break\n",
-    "                    if self.is_non_terminal(symbol):\n",
-    "                        if not symbol in nullable_non_terminals:\n",
-    "                            set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
-    "                                            self.get_set_of_firsts_for_non_terminal(symbol, nullable_non_terminals))\n",
-    "                            break\n",
-    "                        else:\n",
-    "                            set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
-    "                                            self.get_set_of_firsts_for_non_terminal(symbol, nullable_non_terminals))\n",
-    "                    else:\n",
-    "                        set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts, [symbol])\n",
-    "                        break\n",
+    "        set_of_firsts = set()\n",
+    "        \n",
     "        return set_of_firsts\n",
     "    \n",
     "    def get_set_of_firsts_for_non_terminals(self):\n",
@@ -186,12 +193,7 @@
     "        return (production.right_side[len(production.right_side)-1] == non_terminal and\n",
     "                production.right_side.index(non_terminal) == len(production.right_side)-1)\n",
     "    \n",
-    "    def get_productions_same_non_terminal_l_side(self, non_terminal):\n",
-    "        productions = []\n",
-    "        for production in self.production_arr:\n",
-    "            if production.left_side == non_terminal and not production in productions:\n",
-    "                productions.append(production)\n",
-    "        return productions\n",
+    "\n",
     "    \n",
     "    def get_productions_with_non_terminal_r_side(self, non_terminal):\n",
     "        productions = []\n",
@@ -230,36 +232,28 @@
     "                                set_of_nexts = util_f.add_list_no_repeated_elements(set_of_nexts,\n",
     "                                set_of_firsts_for_non_terminals[self.non_terminal_arr.index(production.right_side[index])])\n",
     "                            else:\n",
-    "                                \n",
-    "                for rigth_side in production.right_side:\n",
-    "                    if right_side == non_terminal:\n",
-    "                        non_terminal_founded = True\n",
-    "                    elif non_terminal_found:\n",
+    "                                set_of_nexts = util_f.add_list_no_repeated_elements(set_of_nexts,\n",
+    "                                set_of_firsts_for_non_terminals[self.non_terminal_arr.index(production.right_side[index])])\n",
+    "                                break\n",
+    "                    else:\n",
+    "                        index += 1\n",
     "                        \n",
-    "                        \n",
+    "        return set_of_nexts     \n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<B>', '<D>', '<E>']\n",
+      "{'<B>', '<D>', '<E>'}\n",
       "[2, 6, 8]\n",
-      "[['a', 'e', 'b'], ['b'], ['c', 'e', 'd'], ['e'], ['b', 'e', 'f']]\n",
-      "[['a'], ['e', 'b'], [], ['b'], ['c'], ['e', 'd'], [], ['e'], ['b', 'e'], ['f']]\n"
+      "[('<B>', {'b'}), ('<D>', {'e'})]\n"
      ]
     }
    ],
@@ -270,11 +264,12 @@
     "\n",
     "p1 = [Production('<S>', ['<A>', '<S>', '<B>']), Production('<S>', ['a']), Production('<A>', ['a', '<A>']),\n",
     "      Production('<A>', ['%']), Production('<B>', ['b', '<B>']), Production('<B>', ['%'])]\n",
-    "p_set = ProductionSet('<A>','%', '!', p, ['<A>', '<B>', '<C>', '<D>', '<E>'])   \n",
-    "print(p_set.get_nullable_non_terminals())   \n",
-    "print(p_set.get_nullable_productions(p_set.get_nullable_non_terminals()))\n",
-    "print(p_set.get_set_of_firsts_for_non_terminals())\n",
-    "print(p_set.get_set_of_firsts_for_productions())"
+    "p_set = ProductionSet('<A>','%', '!', p, ['<A>', '<B>', '<C>', '<D>', '<E>'])\n",
+    "nullable_non_terminals = p_set.get_nullable_non_terminals()\n",
+    "nullable_productions = p_set.get_nullable_productions(nullable_non_terminals)\n",
+    "print(nullable_non_terminals)\n",
+    "print(nullable_productions)\n",
+    "print(p_set.get_base_cases_productions_start_with_terminal())"
    ]
   },
   {
@@ -286,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
