--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,34 +129,47 @@
     "                productions.append(production)\n",
     "        return productions\n",
     "    \n",
-    "    def get_base_cases_productions_start_with_terminal(self):\n",
+    "    def get_firsts_base_cases(self, nullable_non_terminals):\n",
     "        base_cases = []\n",
     "        for symbol in self.non_terminal_arr:\n",
     "            productions = self.get_productions_same_non_terminal_l_side(symbol)\n",
     "            firsts = set()\n",
     "            for production in productions:\n",
     "                if self.is_non_terminal(production.right_side[0]):\n",
-    "                    firsts = None\n",
-    "                    break\n",
+    "                    for element in production.right_side:\n",
+    "                        if element in nullable_non_terminals:\n",
+    "                                firsts.add(element)\n",
+    "                        else:\n",
+    "                            firsts.add(element)\n",
+    "                            break\n",
     "                elif self.is_terminal(production.right_side[0]):\n",
     "                    firsts.add(production.right_side[0])\n",
-    "            if firsts:\n",
-    "                base_cases.append((symbol, firsts))\n",
+    "            base_cases.append([symbol, firsts])\n",
     "        return base_cases\n",
-    "        \n",
-    "    def get_set_of_firsts(self, nullable_non_terminals):\n",
-    "        base_cases = self.get_base_cases_productions_start_with_terminal()\n",
-    "        productions =  self.get_productions_same_non_terminal(non_terminal)\n",
-    "        set_of_firsts = set()\n",
-    "        \n",
-    "        return set_of_firsts\n",
     "    \n",
-    "    def get_set_of_firsts_for_non_terminals(self):\n",
-    "        set_of_firsts = []\n",
-    "        nullable_non_terminals = self.get_nullable_non_terminals()\n",
-    "        for non_terminal in self.get_non_terminals():\n",
-    "            set_of_firsts.append(self.get_set_of_firsts_for_non_terminal(non_terminal, nullable_non_terminals))\n",
-    "        return set_of_firsts\n",
+    "    def all_non_terminals_replaced(self, base_cases):\n",
+    "        all_replaced = True\n",
+    "        for case in base_cases:\n",
+    "            for symbol in case[1]:\n",
+    "                if self.is_non_terminal(symbol):\n",
+    "                    all_replaced = False\n",
+    "                    break\n",
+    "        return all_replaced\n",
+    "        \n",
+    "    def get_set_of_firsts_for_non_terminals(self, nullable_non_terminals):\n",
+    "        base_cases = self.get_firsts_base_cases(nullable_non_terminals)\n",
+    "        while True:\n",
+    "            for case in base_cases:\n",
+    "                non_terminals_to_replace = list(filter(lambda x: self.is_non_terminal(x), case[1]))\n",
+    "                replacements = list(filter(lambda x: x[0] in non_terminals_to_replace, base_cases))\n",
+    "                for non_terminal in non_terminals_to_replace:\n",
+    "                    if non_terminal == case[0]:\n",
+    "                        \n",
+    "                    case[1].discard(non_terminal)\n",
+    "                    case[1] = case[1].union(replacements.pop()[1])\n",
+    "            if self.all_non_terminals_replaced(base_cases):\n",
+    "                break\n",
+    "        return base_cases\n",
     "    \n",
     "    def get_set_of_firsts_for_n_production(self, production_number, nullable_non_terminals, set_of_firsts_for_non_terminals):\n",
     "        set_of_firsts = []\n",
@@ -244,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +266,7 @@
      "text": [
       "{'<B>', '<D>', '<E>'}\n",
       "[2, 6, 8]\n",
-      "[('<B>', {'b'}), ('<D>', {'e'})]\n"
+      "[['<A>', {'b', 'a', 'e'}], ['<B>', {'b'}], ['<C>', {'d', 'c', 'e'}], ['<D>', {'e'}], ['<E>', {'b', 'f', 'e'}]]\n"
      ]
     }
    ],
@@ -269,7 +282,7 @@
     "nullable_productions = p_set.get_nullable_productions(nullable_non_terminals)\n",
     "print(nullable_non_terminals)\n",
     "print(nullable_productions)\n",
-    "print(p_set.get_base_cases_productions_start_with_terminal())"
+    "print(p_set.get_set_of_firsts(nullable_non_terminals))"
    ]
   },
   {
@@ -281,25 +294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s = ['a', 'b', 'c']\n",
-    "print(list(filter(lambda x: x == 'a', s)))"
+    "m = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
