--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +41,8 @@
     "        self.production_arr = production_arr\n",
     "        self.non_terminal_arr = non_terminal_arr\n",
     "\n",
-    "    \n",
     "    def is_non_terminal(self, symbol):\n",
-    "        return symbol[0] == '<' and symbol.index('>') == len(symbol)-1\n",
-    "    \n",
+    "        return symbol in self.non_terminal_arr\n",
     "        \n",
     "    def is_terminal(self, symbol):\n",
     "        return symbol != self.null_sequence_symbol and not self.is_non_terminal(symbol)\n",
@@ -53,7 +51,7 @@
     "        return self.non_terminal_arr\n",
     "    \n",
     "    def only_right_side_of_non_terminals(self, production):\n",
-    "        return list(filter(lambda x: x[0] == '<' and x.index('>') == len(x)-1, production.right_side)) == production.right_side\n",
+    "        return list(filter(lambda x: x in self.non_terminal_arr, production.right_side)) == production.right_side\n",
     "    \n",
     "    def production_has_null_sequence_on_right_side(self, production):\n",
     "        return production.right_side[0] == self.null_sequence_symbol\n",
@@ -155,118 +153,97 @@
     "                    all_replaced = False\n",
     "                    break\n",
     "        return all_replaced\n",
+    "    \n",
+    "    def get_set_of_firsts_for_productions(self, nullable_non_terminals, set_of_firsts_for_non_terminals):\n",
+    "        set_of_firsts = []\n",
+    "        for index in range(0, len(self.production_arr)):\n",
+    "            firsts = set()\n",
+    "            for symbol in self.production_arr[index].right_side:\n",
+    "                if self.is_terminal(symbol):\n",
+    "                    firsts.add(symbol)\n",
+    "                    break\n",
+    "                if symbol == self.null_sequence_symbol:\n",
+    "                    break\n",
+    "                if symbol in nullable_non_terminals:\n",
+    "                    firsts = firsts.union(self.get_terminals_from_set(symbol, set_of_firsts_for_non_terminals))\n",
+    "                else:\n",
+    "                    firsts = firsts.union(self.get_terminals_from_set(symbol, set_of_firsts_for_non_terminals))\n",
+    "                    break\n",
+    "            set_of_firsts.append(firsts)\n",
+    "        return set_of_firsts\n",
+    "    \n",
+    "    def get_productions_with_non_terminal_on_r_side(self, non_terminal):\n",
+    "        productions = []\n",
+    "        for production in self.production_arr:\n",
+    "            if non_terminal in production.right_side:\n",
+    "                productions.append(production)\n",
+    "        return productions\n",
+    "    \n",
+    "    def get_terminals_from_set(self, non_terminal, set_of_terminals):\n",
+    "        for case in set_of_terminals:\n",
+    "            if case[0] == non_terminal:\n",
+    "                return case[1]\n",
     "        \n",
-    "    def get_set_of_firsts_for_non_terminals(self, nullable_non_terminals):\n",
-    "        base_cases = self.get_firsts_base_cases(nullable_non_terminals)\n",
+    "    def get_nexts_base_cases(self, nullable_non_terminals, set_of_firsts_for_non_terminals):\n",
+    "        base_cases = []\n",
+    "        for non_terminal in self.non_terminal_arr:\n",
+    "            nexts = set()\n",
+    "            if non_terminal == self.initial_non_terminal:\n",
+    "                nexts.add(self.end_of_sequence_symbol)\n",
+    "            for production in self.get_productions_with_non_terminal_on_r_side(non_terminal):\n",
+    "                indexes_non_terminal = list(filter(lambda i: production.right_side[i] == non_terminal,\n",
+    "                                                   list(range(0, len(production.right_side)))))\n",
+    "                for index in indexes_non_terminal:\n",
+    "                    next_index = index+1\n",
+    "                    while next_index < len(production.right_side):\n",
+    "                        if self.is_non_terminal(production.right_side[next_index]):\n",
+    "                            if production.right_side[next_index] in nullable_non_terminals:\n",
+    "                                nexts = nexts.union(self.get_terminals_from_set(production.right_side[next_index],\n",
+    "                                                                      set_of_firsts_for_non_terminals))\n",
+    "                                if next_index == len(production.right_side)-1:\n",
+    "                                    nexts.add(production.left_side)\n",
+    "                            else:\n",
+    "                                nexts = nexts.union(self.get_terminals_from_set(production.right_side[next_index],\n",
+    "                                                                      set_of_firsts_for_non_terminals))\n",
+    "                                break\n",
+    "                        else:\n",
+    "                            nexts.add(production.right_side[next_index])\n",
+    "                            break\n",
+    "                        next_index += 1\n",
+    "                    if index == len(production.right_side)-1:\n",
+    "                        nexts.add(production.left_side)\n",
+    "            nexts.discard(non_terminal)\n",
+    "            base_cases.append([non_terminal, nexts])\n",
+    "                \n",
+    "        return base_cases\n",
+    "    \n",
+    "    def replace_non_terminals(self, base_cases):\n",
     "        while True:\n",
     "            for case in base_cases:\n",
     "                non_terminals_to_replace = list(filter(lambda x: self.is_non_terminal(x), case[1]))\n",
     "                replacements = list(filter(lambda x: x[0] in non_terminals_to_replace, base_cases))\n",
     "                for non_terminal in non_terminals_to_replace:\n",
-    "                    if non_terminal == case[0]:\n",
-    "                        \n",
     "                    case[1].discard(non_terminal)\n",
     "                    case[1] = case[1].union(replacements.pop()[1])\n",
     "            if self.all_non_terminals_replaced(base_cases):\n",
     "                break\n",
-    "        return base_cases\n",
-    "    \n",
-    "    def get_set_of_firsts_for_n_production(self, production_number, nullable_non_terminals, set_of_firsts_for_non_terminals):\n",
-    "        set_of_firsts = []\n",
-    "        visited_non_terminals = []\n",
-    "        for symbol in self.production_arr[production_number].right_side:\n",
-    "            if self.is_terminal(symbol):\n",
-    "                set_of_firsts.append(symbol)\n",
-    "                break\n",
-    "            if symbol == self.null_sequence_symbol:\n",
-    "                break\n",
-    "            if symbol in nullable_non_terminals:\n",
-    "                if not symbol in visited_non_terminals:\n",
-    "                    set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
-    "                                    set_of_firsts_for_non_terminals[self.get_non_terminals().index(symbol)])\n",
-    "                    visited_non_terminals.append(symbol)\n",
-    "            else:\n",
-    "                set_of_firsts = set_of_firsts_for_non_terminals[self.get_non_terminals().index(symbol)]\n",
-    "                break\n",
-    "        return set_of_firsts\n",
-    "    \n",
-    "    def get_set_of_firsts_for_productions(self):\n",
-    "        set_of_firsts = []\n",
-    "        nullable_non_terminals = self.get_nullable_non_terminals()\n",
-    "        set_of_firsts_for_non_terminals = self.get_set_of_firsts_for_non_terminals()\n",
-    "        for index in range(0, len(self.production_arr)):\n",
-    "            set_of_firsts.append(self.get_set_of_firsts_for_n_production(index, nullable_non_terminals,\n",
-    "                                set_of_firsts_for_non_terminals))\n",
-    "        return set_of_firsts\n",
-    "    \n",
-    "    def is_non_terminal_on_right_side_of_production(self, non_terminal, production):\n",
-    "        return non_terminal in production.right_side\n",
-    "    \n",
-    "    def is_non_terminal_at_the_end_right_side_of_production(self, non_terminal, production):\n",
-    "        return (production.right_side[len(production.right_side)-1] == non_terminal and\n",
-    "                production.right_side.index(non_terminal) == len(production.right_side)-1)\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    def get_productions_with_non_terminal_r_side(self, non_terminal):\n",
-    "        productions = []\n",
-    "        for production in self.production_arr:\n",
-    "            if non_terminal in production.right_side and not production in productions:\n",
-    "                productions.append(production)\n",
-    "        return productions\n",
-    "    \n",
-    "    def get_set_of_nexts_for_non_terminal(self, non_terminal, nullable_non_terminals, productions_same_non_terminal_l_side,\n",
-    "                                          productions_with_non_terminal_r_side, set_of_firsts_for_non_terminals):\n",
-    "        set_of_nexts = []\n",
-    "        for production in productions_same_non_terminal_l_side:\n",
-    "            if (non_terminal == self.initial_non_terminal \n",
-    "                and not self.is_non_terminal_on_right_side_of_production(non_terminal, production)):\n",
-    "                set_of_nexts.append(self.initial_non_terminal)\n",
-    "                break\n",
-    "        for production in productions_with_non_terminal_r_side:\n",
-    "            if self.is_non_terminal_at_the_end_right_side_of_production(non_terminal, production):\n",
-    "                set_of_nexts =  util_f.add_list_no_repeated_elements(set_of_nexts,\n",
-    "                                    self.get_set_of_nexts_for_non_terminal(production.left_side, nullable_non_terminals,\n",
-    "                                    self.get_productions_same_non_terminal_l_side(production.left_side),\n",
-    "                                    self.get_productions_with_non_terminal_r_side(production.left_side),\n",
-    "                                    set_of_firsts_for_non_terminals))\n",
-    "            else:\n",
-    "                non_terminal_found = False\n",
-    "                index = 0\n",
-    "                while index < len(production.right_side):\n",
-    "                    if production.right_side[index] == non_terminal:\n",
-    "                        index += 1\n",
-    "                        while index < len(production.right_side) and production.right_side[index] != non_terminal:\n",
-    "                            if self.is_terminal(production.right_side[index]):\n",
-    "                                set_of_nexts = util_f.add_list_no_repeated_elements(set_of_nexts,\n",
-    "                                                                                    [production.right_side[index]])\n",
-    "                                break\n",
-    "                            if production.right_side[index] in nullable_non_terminals:\n",
-    "                                set_of_nexts = util_f.add_list_no_repeated_elements(set_of_nexts,\n",
-    "                                set_of_firsts_for_non_terminals[self.non_terminal_arr.index(production.right_side[index])])\n",
-    "                            else:\n",
-    "                                set_of_nexts = util_f.add_list_no_repeated_elements(set_of_nexts,\n",
-    "                                set_of_firsts_for_non_terminals[self.non_terminal_arr.index(production.right_side[index])])\n",
-    "                                break\n",
-    "                    else:\n",
-    "                        index += 1\n",
-    "                        \n",
-    "        return set_of_nexts     \n",
-    "                "
+    "        return base_cases      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'<B>', '<D>', '<E>'}\n",
+      "{'<E>', '<D>', '<B>'}\n",
       "[2, 6, 8]\n",
-      "[['<A>', {'b', 'a', 'e'}], ['<B>', {'b'}], ['<C>', {'d', 'c', 'e'}], ['<D>', {'e'}], ['<E>', {'b', 'f', 'e'}]]\n"
+      "[['<A>', {'b', 'a', 'e'}], ['<B>', {'b'}], ['<C>', {'c', 'd', 'e'}], ['<D>', {'e'}], ['<E>', {'b', 'f', 'e'}]]\n",
+      "[{'a'}, {'b', 'e'}, set(), {'b'}, {'c'}, {'d', 'e'}, set(), {'e'}, {'b', 'e'}, {'f'}]\n",
+      "[['<A>', {'d', 'c', '!', 'b', 'e'}], ['<B>', {'d', 'c', '!', 'b', 'e'}], ['<C>', {'d', 'c', '!', 'b', 'e'}], ['<D>', {'b', 'd'}], ['<E>', {'b', 'd'}]]\n"
      ]
     }
    ],
@@ -280,9 +257,15 @@
     "p_set = ProductionSet('<A>','%', '!', p, ['<A>', '<B>', '<C>', '<D>', '<E>'])\n",
     "nullable_non_terminals = p_set.get_nullable_non_terminals()\n",
     "nullable_productions = p_set.get_nullable_productions(nullable_non_terminals)\n",
+    "set_of_firsts_for_non_terminals = p_set.replace_non_terminals(p_set.get_firsts_base_cases(nullable_non_terminals))\n",
+    "set_of_firsts_for_productions = p_set.get_set_of_firsts_for_productions(nullable_non_terminals, set_of_firsts_for_non_terminals)\n",
+    "set_of_nexts_for_non_terminals = p_set.replace_non_terminals(p_set.get_nexts_base_cases(nullable_non_terminals,\n",
+    "                                                                                        set_of_firsts_for_non_terminals))\n",
     "print(nullable_non_terminals)\n",
     "print(nullable_productions)\n",
-    "print(p_set.get_set_of_firsts(nullable_non_terminals))"
+    "print(set_of_firsts_for_non_terminals)\n",
+    "print(set_of_firsts_for_productions)\n",
+    "print(set_of_nexts_for_non_terminals)"
    ]
   },
   {
@@ -294,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
