--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,12 +227,22 @@
     "                    case[1] = case[1].union(replacements.pop()[1])\n",
     "            if self.all_non_terminals_replaced(base_cases):\n",
     "                break\n",
-    "        return base_cases      "
+    "        return base_cases\n",
+    "    \n",
+    "    def get_set_of_selection_for_productions(self, nullable_productions, set_of_firsts_productions, set_of_nexts):\n",
+    "        selection_set = []\n",
+    "        for index in range(0, len(self.production_arr)):\n",
+    "            if index in nullable_productions:\n",
+    "                selection_set.append(set_of_firsts_productions[index].union(self.get_terminals_from_set(\n",
+    "                    self.production_arr[index].left_side, set_of_nexts)))\n",
+    "            else:\n",
+    "                selection_set.append(set_of_firsts_productions[index])\n",
+    "        return selection_set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -243,6 +253,7 @@
       "[2, 6, 8]\n",
       "[['<A>', {'b', 'a', 'e'}], ['<B>', {'b'}], ['<C>', {'c', 'd', 'e'}], ['<D>', {'e'}], ['<E>', {'b', 'f', 'e'}]]\n",
       "[{'a'}, {'b', 'e'}, set(), {'b'}, {'c'}, {'d', 'e'}, set(), {'e'}, {'b', 'e'}, {'f'}]\n",
+      "[['<A>', {'d', 'c', '!', 'b', 'e'}], ['<B>', {'d', 'c', '!', 'b', 'e'}], ['<C>', {'d', 'c', '!', 'b', 'e'}], ['<D>', {'b', 'd'}], ['<E>', {'b', 'd'}]]\n",
       "[['<A>', {'d', 'c', '!', 'b', 'e'}], ['<B>', {'d', 'c', '!', 'b', 'e'}], ['<C>', {'d', 'c', '!', 'b', 'e'}], ['<D>', {'b', 'd'}], ['<E>', {'b', 'd'}]]\n"
      ]
     }
@@ -259,13 +270,15 @@
     "nullable_productions = p_set.get_nullable_productions(nullable_non_terminals)\n",
     "set_of_firsts_for_non_terminals = p_set.replace_non_terminals(p_set.get_firsts_base_cases(nullable_non_terminals))\n",
     "set_of_firsts_for_productions = p_set.get_set_of_firsts_for_productions(nullable_non_terminals, set_of_firsts_for_non_terminals)\n",
-    "set_of_nexts_for_non_terminals = p_set.replace_non_terminals(p_set.get_nexts_base_cases(nullable_non_terminals,\n",
+    "set_of_nexts = p_set.replace_non_terminals(p_set.get_nexts_base_cases(nullable_non_terminals,\n",
     "                                                                                        set_of_firsts_for_non_terminals))\n",
+    "selection_set = p_set.get_set_of_selection_for_productions(nullable_productions, set_of_firsts_for_productions, set_of_nexts)\n",
     "print(nullable_non_terminals)\n",
     "print(nullable_productions)\n",
     "print(set_of_firsts_for_non_terminals)\n",
     "print(set_of_firsts_for_productions)\n",
-    "print(set_of_nexts_for_non_terminals)"
+    "print(set_of_nexts)\n",
+    "print(set_of_nexts)"
    ]
   },
   {
@@ -277,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
